@@ -18,6 +18,7 @@ cgrates (0.10.1~dev) UNRELEASED; urgency=medium
     it *internal
   * [Replicator] Add Limit and StaticTTL otions for Items from
     DataDB/StorDB
+  * Migrator discover tenant from key instead of taking it from config
 
  -- Alexandru Tripon <alexandru.tripon@itsyscom.com>  Wed, 19 Feb 2020 15:22:59 +0200
 
